# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.ps1  init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
