[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.12.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.24"
config = "0.15"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]
