[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.12.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12"
config = "0.15"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]
